| Summary: | ASTERISK-29673: app_read: Fix null pointer crash regression | ||
| Reporter: | N A (InterLinked) | Labels: | |
| Date Opened: | 2021-09-29 12:44:08 | Date Closed: | 2021-09-30 11:07:35 |
| Priority: | Critical | Regression? | |
| Status: | Closed/Complete | Components: | Applications/app_read |
| Versions: | 18.7.0 | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | Fix crash when terminator not specified. | ||
| Comments: | By: Asterisk Team (asteriskteam) 2021-09-29 12:44:09.205-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. Please note that log messages and other files should not be sent to the Sangoma Asterisk Team unless explicitly asked for. All files should be placed on this issue in a sanitized fashion as needed. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. Please note that once your issue enters an open state it has been accepted. As Asterisk is an open source project there is no guarantee or timeframe on when your issue will be looked into. If you need expedient resolution you will need to find and pay a suitable developer. Asking for an update on your issue will not yield any progress on it and will not result in a response. All updates are posted to the issue when they occur. Please note that by submitting data, code, or documentation to Sangoma through JIRA, you accept the Terms of Use present at [https://www.asterisk.org/terms-of-use/|https://www.asterisk.org/terms-of-use/]. By: Friendly Automation (friendly-automation) 2021-09-30 11:07:35.776-0500 Change 16548 merged by Friendly Automation: app_read: Fix null pointer crash [https://gerrit.asterisk.org/c/asterisk/+/16548|https://gerrit.asterisk.org/c/asterisk/+/16548] By: Friendly Automation (friendly-automation) 2021-09-30 11:09:38.638-0500 Change 16550 merged by Friendly Automation: app_read: Fix null pointer crash [https://gerrit.asterisk.org/c/asterisk/+/16550|https://gerrit.asterisk.org/c/asterisk/+/16550] By: Friendly Automation (friendly-automation) 2021-09-30 11:13:30.473-0500 Change 16556 merged by Friendly Automation: app_read: Fix null pointer crash [https://gerrit.asterisk.org/c/asterisk/+/16556|https://gerrit.asterisk.org/c/asterisk/+/16556] By: Friendly Automation (friendly-automation) 2021-09-30 11:46:50.280-0500 Change 16555 merged by George Joseph: app_read: Fix null pointer crash [https://gerrit.asterisk.org/c/asterisk/+/16555|https://gerrit.asterisk.org/c/asterisk/+/16555] By: Friendly Automation (friendly-automation) 2021-09-30 11:47:14.769-0500 Change 16549 merged by George Joseph: app_read: Fix null pointer crash [https://gerrit.asterisk.org/c/asterisk/+/16549|https://gerrit.asterisk.org/c/asterisk/+/16549] By: Friendly Automation (friendly-automation) 2021-09-30 11:47:33.433-0500 Change 16562 merged by George Joseph: app_read: Fix null pointer crash [https://gerrit.asterisk.org/c/asterisk/+/16562|https://gerrit.asterisk.org/c/asterisk/+/16562] | ||